Improve SEO copy for numerology page

--- a/calc-matr.html
+++ b/calc-matr.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Нумерологический Паспорт Личности — готовый продукт</title>
+  <title>Нумерологический паспорт личности — расчёт по дате рождения и матрица судьбы</title>
+  <meta name="description" content="Нумерологический паспорт личности онлайн: быстрый расчёт по дате рождения, ФИО и городу рождения. Получите матрицу судьбы, ключ личности, прогноз и рекомендации в удобном HTML-отчёте.">
   <style>
     :root{
       --bg:#0b0b12;
@@ -273,7 +274,7 @@
         <div>Нумерологический Паспорт</div>
       </div>
       <div class="navLinks">
-        <a href="#how">Как работает</a>
+        <a href="#how">Как считается</a>
         <a href="#app">Расчёт</a>
         <a href="#faq">FAQ</a>
       </div>
@@ -284,10 +285,10 @@
     <!-- HERO -->
     <div class="hero">
       <div class="glass">
-        <h1>🔮 Нумерологический Паспорт Личности</h1>
+        <h1>🔮 Нумерологический паспорт личности</h1>
         <p class="lead">
-          Понятный индивидуальный разбор: <strong>характер</strong>, <strong>предназначение</strong>,
-          <strong>деньги</strong>, <strong>отношения</strong> и <strong>ресурс</strong> — по дате рождения, ФИО и городу рождения.
+          Быстрый <strong>нумерологический расчёт</strong> и <strong>матрица судьбы</strong>:
+          характер, предназначение, деньги, отношения и ресурс — по дате рождения, ФИО и городу рождения.
         </p>
 
         <div class="badges">
@@ -298,9 +299,9 @@
 
         <div class="ctaRow">
           <a class="btn btnPrimary" href="#app" style="text-decoration:none;display:inline-flex;align-items:center;justify-content:center">
-            Получить расчёт
+            Рассчитать паспорт
           </a>
-          <button class="btn btnGhost" onclick="scrollToEl('how')">Как работает</button>
+          <button class="btn btnGhost" onclick="scrollToEl('how')">Как устроен расчёт</button>
         </div>
 
         <div class="mutedBox">
@@ -310,21 +311,21 @@
 
       <div class="card">
         <div class="sectionTitle">
-          <h2 style="margin:0;font-size:18px">Что ты получишь</h2>
-          <div class="hint">за 1–2 минуты</div>
+          <h2 style="margin:0;font-size:18px">Что входит в отчёт</h2>
+          <div class="hint">готово за 1–2 минуты</div>
         </div>
         <div class="grid3" style="grid-template-columns:1fr;gap:10px">
           <div class="feat">
             <h3>Ключ личности</h3>
-            <p>Главная тема жизни и сильные стороны — в короткой форме, без “воды”.</p>
+            <p>Суть характера, мотивация и сильные стороны — кратко и по делу.</p>
           </div>
           <div class="feat">
             <h3>Полный отчёт</h3>
-            <p>Коды + матрица + портрет + сферы жизни + прогноз и рекомендации.</p>
+            <p>Коды, матрица судьбы, портрет, сферы жизни, прогноз и рекомендации.</p>
           </div>
           <div class="feat">
             <h3>Экспорт в HTML</h3>
-            <p>Собираем весь результат в один HTML-файл: можно сохранить, отправить, распечатать.</p>
+            <p>Собираем весь результат в один HTML-файл — удобно сохранить, отправить, распечатать.</p>
           </div>
         </div>
       </div>
@@ -333,21 +334,21 @@
     <!-- HOW -->
     <div class="card anchor" id="how">
       <div class="sectionTitle">
-        <h2 style="margin:0">Как работает</h2>
-        <div class="hint">простая логика</div>
+        <h2 style="margin:0">Как считается нумерологический паспорт</h2>
+        <div class="hint">простая и прозрачная логика</div>
       </div>
       <div class="grid3">
         <div class="feat">
           <h3>1) Дата рождения</h3>
-          <p>Даёт общий жизненный сценарий и базовые задачи (число жизненного пути).</p>
+          <p>Даёт базовый сценарий и задачи: число жизненного пути — основа для расчёта по дате рождения.</p>
         </div>
         <div class="feat">
           <h3>2) ФИО</h3>
-          <p>Показывает, как ты проявляешься в мире: стиль действий, коммуникация, роль.</p>
+          <p>Показывает, как ты проявляешься в мире: стиль действий, коммуникация и личная роль.</p>
         </div>
         <div class="feat">
           <h3>3) Город рождения</h3>
-          <p>Добавляет “фон”: темп, возможности, среда — как место влияет на развитие.</p>
+          <p>Добавляет фон и среду: темп, возможности и влияние места на развитие.</p>
         </div>
       </div>
       <div class="mutedBox">
@@ -359,8 +360,8 @@
     <div class="appWrap anchor" id="app">
       <div class="card">
         <div class="sectionTitle">
-          <h2 style="margin:0">Индивидуальный расчёт</h2>
-          <div class="hint">5 полей — и готово</div>
+          <h2 style="margin:0">Онлайн калькулятор нумерологии</h2>
+          <div class="hint">5 полей — и готовый нумерологический паспорт</div>
         </div>
 
         <div class="formGrid">
@@ -393,7 +394,7 @@
         </div>
 
         <div class="mutedBox" id="modeHint">
-          Режим: <strong>Подробно</strong> — полный отчёт со всеми блоками.
+          Режим: <strong>Подробно</strong> — полный отчёт со всеми блоками и интерпретациями.
         </div>
       </div>
 
@@ -414,7 +415,7 @@
             <div class="hint">весь отчёт в HTML</div>
           </div>
           <div class="k">
-            Нажми кнопку — и мы соберём весь результат в <strong>отдельную HTML-страницу</strong> (со стилями), которую можно сохранить/отправить/распечатать.
+            Нажми кнопку — и мы соберём весь результат в <strong>отдельную HTML-страницу</strong> (со стилями), которую можно сохранить, отправить или распечатать.
           </div>
           <div class="ctaRow">
             <button class="btn btnPrimary btnSmall" onclick="openExportModal()">Показать HTML отчёта</button>
@@ -437,19 +438,19 @@
       <div class="row">
         <div>
           <strong>Это отправляет мои данные куда-то?</strong>
-          <div class="k">Нет. Всё работает локально в браузере. Нет сервера, нет отправки данных.</div>
+          <div class="k">Нет. Всё работает локально в браузере: нумерологический расчёт выполняется без сервера и передачи данных.</div>
         </div>
       </div>
       <div class="row">
         <div>
           <strong>Можно сохранить результат?</strong>
-          <div class="k">Да. Нажми «Скачать HTML» — это будет полноценный файл с отчётом.</div>
+          <div class="k">Да. Нажми «Скачать HTML» — это будет полноценный файл с отчётом и матрицей судьбы.</div>
         </div>
       </div>
       <div class="row">
         <div>
           <strong>Кратко / Подробно — в чём разница?</strong>
-          <div class="k">Кратко показывает суть и рекомендации. Подробно — весь отчёт: коды, матрица, портрет, сферы жизни, прогноз.</div>
+          <div class="k">Кратко показывает суть и рекомендации. Подробно — весь отчёт: коды, матрица судьбы, портрет, сферы жизни, прогноз.</div>
         </div>
       </div>
     </div>
@@ -1327,14 +1328,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Нумерологический Паспорт — Отчёт</title>
+  <title>Нумерологический паспорт — отчёт и матрица судьбы</title>
   <style>${reportCss}</style>
 </head>
 <body>
   <div class="wrap">
     <div class="top">
       <div>
-        <h1>🔮 Нумерологический Паспорт — Отчёт</h1>
+        <h1>🔮 Нумерологический паспорт — отчёт</h1>
         <div class="meta">Сформировано: ${escapeHtml(now)}</div>
       </div>
       <div class="meta" style="text-align:right">
